@@ -8,6 +8,10 @@
     changelog <source-package-name>", and no binary packages in that source
     package match the source package name (Closes: #723821)
 
+  * Use new URL to grab changelogs, redirections were set up so it is not
+    currently a problem, but the new location seems to be the canonical place
+    for metadata (Closes: #708345)
+
 - Internal changes:
 
   * Change INCLUDES to AM_CPPFLAGS in automake files to avoid warning:
